$Id: History,v 1.14 2000-04-07 13:00:26 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Sub-Category History file
                      -------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 05,   00   G. Cosmo                  geom-solids-csg-V01-01-01
 - G4Tubs.cc: fixed bug in function Inside(p).
              Removed (commented) in the code umproper addition of 2PI
	      to Phi-angle particle (V.Grichine)
 - G4Hype[.hh.cc]: fixed several longstanding issues and bring methods
                   into compliance with specifications  (D.Williams)
 - Moved to "specific" the following classes:
   G4ClippablePolygon, G4EnclosingCylinder, G4Hype, G4PolyPhiFace,
   G4Polycone, G4PolyconeSide, G4Polyhedra, G4PolyhedraSide,
   G4ReduciblePolygon, G4IntersectingCone, G4SolidExtentList,
   G4VCSGface, G4VCSGfaceted.
 - Moved testG4Hype.cc and testG4Polycone.cc from CSG/test to
   specific/test
 - Moved generic tests "SBT" and "Fred" one level up to solids/test.
 - Organised class description comments for the Software Reference Manual
   in all headers.

Mar 23,   00   G. Cosmo                  geom-solids-csg-V01-01-00
 - Tagged.

Mar 22,   00   D. Williams
 - G4PolyhedraSide.cc: fixed bug in G4PolyhedraSide::Normal(...).
   The method Normal(...) (used by G4VCSGfaceted::SurfaceNormal) was not