@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Sphere.cc,v 1.6 2000-03-14 08:49:48 gcosmo Exp $
+// $Id: G4Sphere.cc,v 1.7 2000-04-11 16:04:28 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // class G4Sphere
@@ -37,7 +37,6 @@
 #include "G4Polyhedron.hh"
 #include "G4NURBS.hh"
 #include "G4NURBSbox.hh"
-#include "G4VisExtent.hh"
 
 // Private enum: Not for external use - used by distanceToOut
 
@@ -2706,12 +2705,6 @@ G4Sphere::CreateRotatedVertices(const G4AffineTransform& pTransform,
 void G4Sphere::DescribeYourselfTo (G4VGraphicsScene& scene) const
 {
   scene.AddThis (*this);
-}
-
-G4VisExtent G4Sphere::GetExtent() const
-{
-  // Define the sides of the box into which the G4Sphere instance would fit.
-  return G4VisExtent (-fRmax, fRmax, -fRmax, fRmax, -fRmax, fRmax);
 }
 
 G4Polyhedron* G4Sphere::CreatePolyhedron () const
